# pocketbase

./: .gitignore  ARCH_RULES.md  CHANGELOG.md  CODEBUDDY.md  MANUAL.md  MISSING_TESTS.txt  Makefile  PM_RULES.md  POCKETLESS_TEST_ALIGNMENT_VERDICT.md  README.md  SUMMARY.md  TEST_ALIGNMENT_SUMMARY.md  TRACE_IMPLEMENTATION_SUMMARY.md  build.sh  bun-llms.txt  go.mod  go.sum  package-lock.json  package.json  pocketbase-design.md  pocketbase.go  test_alignment_analysis.md
apis/: analytics.go  analytics_events.go  analytics_events_test.go  analytics_logging_test.go  analytics_stats.go  analytics_stats_test.go  backup_test.go  base.go  batch_test.go  collection.go  collection_import_test.go  collection_test.go  cron_test.go  database_stats.go  database_stats_test.go  file_test.go  health.go  health_test.go  installer.go  job_routes.go  job_routes_test.go  kv_routes.go  kv_routes_test.go  logs.go  logs_test.go  metrics.go  metrics_test.go  middlewares.go  middlewares_test.go  middlewares_trace.go  (+41 more)
pythonsdk/: CHANGELOG.md  LICENSE  README.md  pyproject.toml
pythonsdk/src/pocketbase/: __init__.py  async_client.py  client.py  client_response_error.py
pythonsdk/src/pocketbase/models/: __init__.py  auth.py  collection.py  list_result.py  record.py
pythonsdk/src/pocketbase/services/: __init__.py  analytics_service.py  async_realtime_service.py  async_record_service.py  backup_service.py  base_service.py  batch_service.py  collection_service.py  cron_service.py  crud_service.py  file_service.py  health_service.py  jobs_service.py  log_service.py  realtime_service.py  record_service.py  secrets_service.py  settings_service.py  trace_service.py
pythonsdk/src/pocketbase/stores/: __init__.py  base_auth_store.py  file_auth_store.py  memory_auth_store.py
pythonsdk/src/pocketbase/utils/: __init__.py  filter.py  jwt.py  options.py
pythonsdk/tests/: __init__.py  conftest.py  test_async_client.py  test_auto_refresh.py  test_cancellation.py  test_client.py  test_client_response_error.py  test_edge_cases.py  test_impersonate.py
pythonsdk/tests/models/: test_auth.py  test_collection.py  test_list_result.py  test_record.py
pythonsdk/tests/services/: test_analytics_service.py  test_async_realtime_service.py  test_backup_service.py  test_batch_service.py  test_collection_service.py  test_cron_service.py  test_crud_service.py  test_file_service.py  test_health_service.py  test_jobs_service.py  test_log_service.py  test_realtime_service.py  test_record_realtime.py  test_record_service.py  test_secrets_service.py  test_settings_service.py  test_trace_service.py
pythonsdk/tests/stores/: __init__.py  test_base_auth_store.py  test_file_auth_store.py  test_memory_auth_store.py
pythonsdk/tests/utils/: test_filter.py  test_jwt.py  test_options.py
(+2257 files in other folders)
